CZHDEV-3034: Added style to prevent any word-break inside the hightlight;

--- a/src/assets/css/globals/_searchhighlight.scss
+++ b/src/assets/css/globals/_searchhighlight.scss
@@ -13,3 +13,6 @@
     }
   }
 }
+.searchhighlight {
+  word-break: keep-all;
+}
